--- a/roles/docker/tests/Vagrantfile
+++ b/roles/docker/tests/Vagrantfile
@@ -14,4 +14,13 @@ Vagrant.configure(2) do |config|
     # end
   end
 
+  config.vm.define "node2" do |node2|
+    node2.vm.network "private_network", ip: "192.168.33.11"
+    node2.vm.hostname = "node2"
+
+    # node1.vm.provision "ansible" do |ansible|
+    #   ansible.playbook = "playbook.yml"
+    # end
+  end
+
 end
