--- a/biggis-docker/biggis-pipeline/biggis-base/java8/Dockerfile
+++ b/biggis-docker/biggis-pipeline/biggis-base/java8/Dockerfile
@@ -2,8 +2,7 @@ FROM java:8-jre-alpine
 
 MAINTAINER wipatrick
 
-RUN echo 'http://dl-4.alpinelinux.org/alpine/v3.4/main' >> /etc/apk/repositories && \
-    echo '@testing http://dl-4.alpinelinux.org/alpine/edge/testing' >> /etc/apk/repositories
+ADD repositories /etc/apk
 RUN apk add --no-cache bash curl snappy supervisor gosu@testing
 
 # Configure supervisor
@@ -11,7 +10,7 @@ ADD supervisor.conf /etc/supervisor/
 
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
-RUN mkdir /storage
+RUN mkdir /storage /opt
 
 WORKDIR /home
 
