--- a/biggis-docker/biggis-pipeline/docker-compose.yml
+++ b/biggis-docker/biggis-pipeline/docker-compose.yml
@@ -30,9 +30,9 @@ services:
       - db
       - kafka
     # network_mode: "host"
-    # ports:
-    #   - "8081:8081"
-    #   - "6123:6123"
+    ports:
+      - "8081:8081"
+      - "6123:6123"
     command: docker-entrypoint.sh jobmanager
     environment:
       USER_ID: ${USER_ID}
