Reworked Dockerfiles to only temporarily use curl pkg

--- a/biggis-docker/biggis-pipeline/biggis-kafka/Dockerfile
+++ b/biggis-docker/biggis-pipeline/biggis-kafka/Dockerfile
@@ -8,9 +8,13 @@ ARG SCALA_VERSION=2.10
 
 ENV KAFKA_RELEASE_ARCHIVE kafka_${SCALA_VERSION}-${KAFKA_VERSION}.tgz
 
-RUN curl -s http://apache.openmirror.de/kafka/${KAFKA_VERSION}/${KAFKA_RELEASE_ARCHIVE} | tar -xzf - -C /opt \
-    && mv /opt/kafka_${SCALA_VERSION}-${KAFKA_VERSION} /opt/kafka \
-    && mkdir -p /tmp/kafka /tmp/logs
+RUN set -x && \
+    apk --update add --virtual build-dependencies curl && \
+    curl -s http://apache.openmirror.de/kafka/${KAFKA_VERSION}/${KAFKA_RELEASE_ARCHIVE} | tar -xzf - -C /opt && \
+    ln -s /opt/kafka_${SCALA_VERSION}-${KAFKA_VERSION} /opt/kafka && \
+    mkdir -p /tmp/kafka /tmp/logs && \
+    apk del build-dependencies && \
+    rm -rf /var/cache/apk/*
 
 ENV KAFKA_HOME /opt/kafka
 ENV PATH $KAFKA_HOME/bin:$PATH
