--- a/biggis-docker/biggis-pipeline/biggis-zookeeper/Dockerfile
+++ b/biggis-docker/biggis-pipeline/biggis-zookeeper/Dockerfile
@@ -1,5 +1,3 @@
-# Forked from https://github.com/jplock/docker-zookeeper
-# and adjusted to alpine base image
 FROM biggis/base:java8-jre-alpine
 
 MAINTAINER wipatrick
@@ -11,13 +9,12 @@ RUN set -x && \
     curl -s http://apache.mirrors.pair.com/zookeeper/zookeeper-$VERSION/zookeeper-$VERSION.tar.gz | tar -xzf - -C /opt && \
     ln -s /opt/zookeeper-$VERSION /opt/zookeeper && \
     cp /opt/zookeeper/conf/zoo_sample.cfg /opt/zookeeper/conf/zoo.cfg && \
+    sed -i -e "s/dataDir=\/tmp\/zookeeper/dataDir=\/tmp\/zookeeper\/data/g" /opt/zookeeper/conf/zoo.cfg && \
     mkdir -p /tmp/zookeeper && \
     apk del build-dependencies && \
     rm -rf /var/cache/apk/*
 
 WORKDIR /opt/zookeeper
-
-VOLUME ["/opt/zookeeper", "/tmp/zookeper"]
 
 EXPOSE 2181 2888 3888
 
