--- a/biggis-docker/biggis-pipeline/docker-compose.yml
+++ b/biggis-docker/biggis-pipeline/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       USER_ID: ${USER_ID}
       USER_NAME: zookeeper
+    volumes:
+      - zookeeper-data:/tmp/zookeeper/data
 
   kafka:
     image: biggis/kafka:0.9.0.0
@@ -15,12 +17,14 @@ services:
     hostname: kafka
     depends_on:
       - zookeeper
-    ports:
-      - "9092:9092"
+    # ports:
+    #   - "9092:9092"
     environment:
     #  KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
-     USER_ID: ${USER_ID}
-     USER_NAME: kafka
+      USER_ID: ${USER_ID}
+      USER_NAME: kafka
+    volumes:
+      - kafka-data:/tmp/kafka/data
 
   jobmanager:
     image: biggis/flink:1.0.3
@@ -75,7 +79,7 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - mysql-data:/var/lib/mysql
+      - db-data:/opt/mysql
 
 # networks:
 #   collect:
@@ -83,8 +87,10 @@ services:
 #   db:
 
 volumes:
+  zookeeper-data:
+  kafka-data:
+  db-data:
   storage-rasteringest:
   storage-normtiles:
   storage-hstiles:
   flink-conf:
-  mysql-data:
