--- a/biggis-docker/biggis-pipeline/docker-compose.yml
+++ b/biggis-docker/biggis-pipeline/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: biggis/zookeeper:3.4.6
     restart: always
     hostname: zookeeper
+    ports:
+      - "2181:2181"
     environment:
       USER_ID: ${USER_ID}
       USER_NAME: zookeeper
@@ -17,10 +19,10 @@ services:
     hostname: kafka
     depends_on:
       - zookeeper
-    # ports:
-    #   - "9092:9092"
+    ports:
+      - "9092:9092"
     environment:
-    #  KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
+      KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
       USER_ID: ${USER_ID}
       USER_NAME: kafka
     volumes:
