--- a/biggis-docker/biggis-pipeline/docker-compose.yml
+++ b/biggis-docker/biggis-pipeline/docker-compose.yml
@@ -59,7 +59,7 @@ services:
     volumes_from:
       - jobmanager
     volumes:
-      - rasteringest:/storage/ingesttiles:ro
+      - ingesttiles:/storage/ingesttiles:ro
       - normtiles:/storage/normtiles
       - hstiles:/storage/hstiles
 
