Changed Kafka mirror

--- a/biggis-docker/biggis-pipeline/Makefile
+++ b/biggis-docker/biggis-pipeline/Makefile
@@ -10,6 +10,7 @@ build: ## docker build images
 	docker build --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` --build-arg VCS_REF=`git rev-parse --short HEAD` -t "biggis/zookeeper:3.4.6" biggis-zookeeper
 	docker build --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` --build-arg VCS_REF=`git rev-parse --short HEAD` -t "biggis/flink:1.0.3" biggis-flink
 	docker build --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` --build-arg VCS_REF=`git rev-parse --short HEAD` -t "biggis/mariadb:10.1.14" biggis-mariadb
+	docker build --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` --build-arg VCS_REF=`git rev-parse --short HEAD` -t "biggis/tomcat:8.0.36" biggis-tomcat
 
 clean: ## remove all unnecessary volumes and the created network
 	docker rm -v $$(docker ps --filter status=exited -q 2>/dev/null) 2>/dev/null
