--- a/biggis-docker/biggis-pipeline/testing/tomcat/pom.xml
+++ b/biggis-docker/biggis-pipeline/testing/tomcat/pom.xml
@@ -34,19 +34,12 @@
       <version>1.8</version>
     </dependency>
 
-    <!-- csv -->
-    <dependency>
-      <groupId>com.opencsv</groupId>
-      <artifactId>opencsv</artifactId>
-      <version>3.4</version>
-    </dependency>
-
     <!-- log4j -->
-<!--    <dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>2.4.1</version>
-    </dependency>-->
+      <version>2.5</version>
+    </dependency>
 
     <!-- gson -->
     <dependency>
@@ -59,17 +52,30 @@
     <!-- Apache Kafka -->
     <dependency>
       <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>0.9.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.10</artifactId>
       <version>0.9.0.0</version>
-      <scope>compile</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
+
 
 
 
   </dependencies>
 
   <build>
-    <finalName>tomcat-dummy-api</finalName>
+    <finalName>tomcat-api</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
