--- a/biggis-docker/tests/tomcat/src/main/resources/consumer.properties
+++ b/biggis-docker/tests/tomcat/src/main/resources/consumer.properties
@@ -1,5 +1,5 @@
 # Apache Kafka Producer properties
-bootstrap.servers=192.168.99.100:9092
+bootstrap.servers=kafka:9092
 group.id=demo
 enable.auto.commit=true
 auto.commit.interval.ms=1000
