--- a/biggis-docker/tests/tomcat/src/main/resources/producer.properties
+++ b/biggis-docker/tests/tomcat/src/main/resources/producer.properties
@@ -1,5 +1,5 @@
 # Apache Kafka Producer properties
-bootstrap.servers=192.168.99.100:9092
+bootstrap.servers=kafka:9092
 acks=all
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
