--- a/biggis-docker/biggis-pipeline/docker-compose.yml
+++ b/biggis-docker/biggis-pipeline/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
+    #  KAFKA_ADVERTISED_HOST_NAME: localhost
       USER_ID: ${USER_ID}
       USER_NAME: kafka
     # volumes:
