--- a/biggis-docker/tests/tomcat/pom.xml
+++ b/biggis-docker/tests/tomcat/pom.xml
@@ -12,14 +12,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>geotoolkit</id>
-			<name>Repository for JAI libraries</name>
-			<url>http://maven.geotoolkit.org/</url>
-		</repository>
-	</repositories>
-
 	<dependencies>
 
 		<dependency>
@@ -34,6 +26,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
@@ -130,26 +123,6 @@
 			<artifactId>tomcat-servlet-api</artifactId>
 			<version>8.0.36</version>
 		</dependency>
-
-		<!-- JAI -->
-		<dependency>
-			<groupId>javax.media</groupId>
-			<artifactId>jai_imageio</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.media</groupId>
-			<artifactId>jai_core</artifactId>
-			<version>1.1.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.media</groupId>
-			<artifactId>jai_codec</artifactId>
-			<version>1.1.3</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
