--- a/biggis-docker/tests/tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/biggis-docker/tests/tomcat/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,7 @@
 
 	<servlet-mapping>
 		<servlet-name>kafka-consumer-servlet</servlet-name>
-		<url-pattern>/v1</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
