--- a/biggis-docker/biggis-pipeline/biggis-kafka/Dockerfile
+++ b/biggis-docker/biggis-pipeline/biggis-kafka/Dockerfile
@@ -2,9 +2,10 @@
 FROM biggis/base:java8-jre-alpine
 MAINTAINER wipatrick
 
-# The Scala 2.10 build is currently recommended by the project.
+# The Scala 2.11 build is currently recommended by the project.
+# Once Flink 1.2 is available we can upgrade to 0.10.X
 ARG KAFKA_VERSION=0.9.0.0
-ARG SCALA_VERSION=2.10
+ARG SCALA_VERSION=2.11
 
 ARG BUILD_DATE
 ARG VCS_REF
