--- a/templates/flink/0/docker-compose.yml
+++ b/templates/flink/0/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - jobmanager
     command: docker-entrypoint.sh taskmanager
     labels:
-      - io.rancher.scheduler.affinity:container_soft_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
+      io.rancher.scheduler.affinity:container_soft_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
     environment:
       USER_ID: 1000
       USER_NAME: flink
