--- a/templates/biggis/0/rancher-compose.yml
+++ b/templates/biggis/0/rancher-compose.yml
@@ -5,14 +5,14 @@
     (Experimental) BigGIS Cluster
   minimum_rancher_version: v0.59.0
   maintainer: "Patrick Wiener <patrick.wiener@hs-karlsruhe.de>"
-  uuid: flink-0
-  questions:
-    - variable: "flink_scale"
-      description: "Number of Flink taskmanager nodes."
-      label: "Flink Nodes:"
-      required: true
-      default: 1
-      type: "int"
+  uuid: biggis-0
+  # questions:
+  #   - variable: "flink_scale"
+  #     description: "Number of Flink taskmanager nodes."
+  #     label: "Flink Nodes:"
+  #     required: true
+  #     default: 1
+  #     type: "int"
 jobmanager:
   retain_ip: true
   health_check:
@@ -40,5 +40,5 @@ kafka:
     request_line: ''
     healthy_threshold: 2
     response_timeout: 5000
-taskmanager:
-    scale: ${flink_scale}
+# taskmanager:
+#     scale: ${flink_scale}
