--- a/templates/biggis/0/docker-compose.yml
+++ b/templates/biggis/0/docker-compose.yml
@@ -135,11 +135,30 @@ services:
         max-size: "1m"
         max-file: "1"
 
+  couchdb:
+    image: couchdb
+    hostname: couchdb
+    ports: "5984:5984"
+    volumes:
+      - couchdb-data:/usr/local/var/lib/couchdb
+    labels:
+      io.rancher.container.pull_image: always
+      io.rancher.scheduler.affinity:host_label nfs_server=true
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
+
+
 volumes:
   zookeeper-data:
     driver: rancher-nfs
     external: true
   kafka-data:
+    driver: rancher-nfs
+    external: true
+  couchdb-data:
     driver: rancher-nfs
     external: true
   landuse-data:
