add healthcheck for couchdb

--- a/templates/biggis/0/rancher-compose.yml
+++ b/templates/biggis/0/rancher-compose.yml
@@ -40,6 +40,15 @@ kafka:
     request_line: ''
     healthy_threshold: 2
     response_timeout: 5000
+couchdb:
+  retain_ip: true
+  health_check:
+    port: 5984
+    interval: 5000
+    unhealthy_threshold: 3
+    request_line: ''
+    healthy_threshold: 2
+    response_timeout: 5000
 spark-master:
   retain_ip: true
   health_check:
