--- a/templates/biggis/0/docker-compose.yml
+++ b/templates/biggis/0/docker-compose.yml
@@ -143,7 +143,7 @@ services:
       - couchdb-data:/usr/local/var/lib/couchdb
     labels:
       io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label nfs_server=true
+      io.rancher.scheduler.affinity:host_label: nfs_server=true
     logging:
       driver: "json-file"
       options:
